--- a/server/src/emails/base.pug
+++ b/server/src/emails/base.pug
@@ -1,5 +1,5 @@
 mixin layouttable
-  table(role="presentation" cellpadding="0" cellspacing="0")&attributes(attributes)
+  table(role="presentation" border="0" cellpadding="0" cellspacing="0")&attributes(attributes)
     block
 
 mixin cell
@@ -12,21 +12,77 @@ mixin singlecelltable
     +cell()
         block
 
+mixin copyable_link(to)
+  a(href=to) #{to}
+
+mixin email_link(addr)
+  a(href='mailto:' + addr) #{addr}
+
+mixin ln
+  p&attributes(attributes)
+    block
+  br
+
 doctype html
 html(lang="en")
   head
-    meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="base.css", data-inline)
+    block metas
+      meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
+      meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    block basestyles
+      style.
+        /* Reset spacing around text elements to make styling more predictable */
+        body,
+        p,
+        h1 {
+          margin: 0;
+          padding: 0;
+        }
+
+        #container {
+          /* Add some breathing room */
+          padding: 20px 0 30px 0;
+          font-family: Arial, sans-serif;
+          line-height: 15px;
+        }
+
+        #subcontainer {
+          border: 1px solid #cccccc;
+        }
+
+        #header {
+          padding: 30px 15px;
+        }
+
+        #main {
+          /* No need for bottom padding due to trailing br tags */
+          padding: 0px 15px;
+        }
+
+        #footer {
+          padding: 30px 30px;
+          color: white;
+        }
+    block styles
   body
     //- Container table
-    +singlecelltable#container(border="1" width="100%")
+    +singlecelltable#container(width="100%")
       //- Centered main content, 600px wide
-      +layouttable#subcontainer(align="center" border="1" width="600" style="border-collapse: collapse;")
+      +layouttable#subcontainer(align="center" width="600" style="border-collapse: collapse;")
         +cell#header()
-          h1 Lireddit
+          block heading
+            h1 #{SITE_NAME}
         +cell#main()
-          p Hello Username,
+          //- Need nbsp for outlook - https://stackoverflow.com/a/15162536/9196137
+          block main
+            | &nbsp;
+            br
+            block content
+            br
+            | &nbsp;
+            br
+            | &nbsp;
         //- Footer
         +cell#footer(bgcolor="#A0AEC0" cellpadding="1")
-          p &copy; Lireddit 2020
+          block footer
+            p &copy; #{SITE_NAME} #{COPYRIGHT_YEAR}
